# docs/swagger.json
@@ -134,16 +134,13 @@
         "web.SignUpReq": {
             "type": "object",
             "properties": {
-                "avatar": {
-                    "type": "string"
-                },
                 "mobile": {
                     "type": "string"
                 },
                 "nick_name": {
                     "type": "string"
                 },
-                "openid": {
+                "signup_token": {
                     "type": "string"
                 }
             }
@@ -159,7 +156,10 @@
         "web.reqUploadToken": {
             "type": "object",
             "properties": {
-                "file_name": {
+                "file_ext": {
+                    "type": "string"
+                },
+                "file_type": {
                     "type": "string"
                 }
             }
