# internal/service/oss/types.go
@@ -1,6 +1,8 @@
 package oss
 
+import "io"
+
 type Service interface {
 	GetUploadToken(param any) (string, error)
-	UploadFile(data []byte) error
+	UploadFile(reader io.Reader, fileName, fileType string, uid uint64) (string, error)
 }
